# ayjay

./: README.md  pyproject.toml
src/ayjay/: __init__.py
tests/: conftest.py  test_ayjay.py  tests.py
