[project]
name = "ayjay"
version = "0.1.1"
description = "Small package for getting cached API requests with propper error handling."
authors = [
    { name = "Tobias Schnack", email = "tobias.schnack@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "diskcache>=5.6.3",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ayjay"]
